--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <title>Vite + React</title>
 
-    <!-- ✅ Add this script to load dark mode BEFORE app renders -->
     <script>
       const theme = localStorage.getItem('theme');
       if (theme === 'dark') {
